test/compile_error/redefined.conf.2.def
config redefined_conf {
	enum foo_t { FOO, BAR, FOO }
}
